force-app/main/default/objects/SCOC__PaymentHistory__c/SCOC__PaymentHistory__c.object-meta.xml
<CustomObject>
    <description>Response Entity Tradeline Payment History</description>
    <label>Payment History</label>
    <nameField>
        <displayFormat>PAYMENTS-{00000}</displayFormat>
        <label>Payment History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>