force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__AccountBalance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AccountBalance__c</fullName>
    <description>Payment History Account Balance</description>
    <label>AccountBalance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>