force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__AgeInMonths__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AgeInMonths__c</fullName>
    <description>Age In Months</description>
    <label>Age In Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>