force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__CashAdvanceCount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CashAdvanceCount__c</fullName>
    <description>Cash Advance Count</description>
    <label>Cash Advance Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>