force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__CashAdvanceValue__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CashAdvanceValue__c</fullName>
    <description>Cash Advance Value</description>
    <label>Cash Advance Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>