force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditLimit__c</fullName>
    <description>Payment History Credit Limit</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>