force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__CreditLimitChange__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditLimitChange__c</fullName>
    <description>Credit Limit Change</description>
    <label>Credit Limit Change</label>
    <length>20</length>
    <type>Text</type>
</CustomField>