force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__CreditLimitSuppressed__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditLimitSuppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Limit Suppressed</description>
    <inlineHelpText>Credit Limit Suppressed</inlineHelpText>
    <label>Credit Limit Suppressed</label>
    <type>Checkbox</type>
</CustomField>