force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__PaymentStatusCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PaymentStatusCode__c</fullName>
    <description>Payment Status Code</description>
    <label>Payment Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>