force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__PromotionalRate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PromotionalRate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Promotional Rate</description>
    <inlineHelpText>Promotional Rate</inlineHelpText>
    <label>Promotional Rate</label>
    <type>Checkbox</type>
</CustomField>