force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__StatementBalanceSuppressed__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StatementBalanceSuppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Statement Balance Suppressed</description>
    <inlineHelpText>Statement Balance Suppressed</inlineHelpText>
    <label>Statement Balance Suppressed</label>
    <type>Checkbox</type>
</CustomField>