force-app/main/default/objects/SCOC__PaymentHistory__c/fields/SCOC__TradelineList__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TradelineList__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated TradelineList.</description>
    <label>Tradeline List Entity</label>
    <referenceTo>SCOC__TradelineList__c</referenceTo>
    <relationshipLabel>Tradeline Payment History</relationshipLabel>
    <relationshipName>TradelineList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>